Fix scales easy songs section to remove white space on 4k screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,7 +314,43 @@ audio {
 
 @media only screen and (min-width: 2559px){
 
-
+  .easy-songs {
+    height: 1000px;
+    margin-bottom: 0;
+    background-color: #CE4027;
+    z-index: 0;
+  }
+  
+  .easy-songs a {
+    text-decoration: underline;
+    color: #ffffff;
+  }
+  
+  .easy-songs h2 {
+    height: fit-content;
+    padding-top: 0;
+  
+  }
+  
+  .easy-songs h6{
+    color: #ffffff;
+  }
+  
+  .easy-songs p {
+    color: #ffffff;
+    text-align: center;
+    padding-bottom: 20px;
+  }
+  
+  .song {
+    height: fit-content;
+    padding-bottom: 150px;
+  }
+  
+  audio {
+    float: right;
+    padding-bottom: 10px;
+  }
 
 
   #footer-bottom{
